--- a/Puebas Mkdown/Preuba 3 - fix_plot1 - Numero de virus/Preuba 3 - fix_plot1 - Numero de virus.Rmd
+++ b/Puebas Mkdown/Preuba 3 - fix_plot1 - Numero de virus/Preuba 3 - fix_plot1 - Numero de virus.Rmd
@@ -169,15 +169,19 @@ diagnóstico de los principales agentes a los que se les atribuye el
 IRAG.
 
 ```{r historic-data}
-SHEET_NAME <- "POR PERIODO"
-INDICADOR <- 2
+SHEET_NAME <- "TOTAL"
+INDICADOR <- 1
+
 tables <- get_all_tables(params$historic_data, SHEET_NAME)
 tabla <- get_selected_table(tables, INDICADOR)
+
+## ARREGLAR DESDE AQUI
+
 tabla <- clean_historic_data(tabla = tabla)
 historic_epi_times <- get_historic_epi_times(tabla = tabla)
 ```
 
-En el análisis del comportamiento de los virus respiratorios por periodo epidemiológico desde el 2022 se observa que se ha mantenido la circulación de virus como Rinovirus, Adenovirus y VSR. Para los tres años entre los periodos 3 al 6 coincide con el pico respiratorio que se presenta en todos los años (Figura 1).
+En el análisis del ...
 
 ```{r plot-historic-data, include=TRUE, fig.height=6, fig.width=8,fig.cap="Circulación de virus respiratorios por período epidemiológico Año 2022 - 2024, Laboratorio de Salud Pública Bogotá."}
 plot_historic_epi_time(stacked_data = historic_epi_times$stacked_data,
